--- a/site/pom.xml
+++ b/site/pom.xml
@@ -195,6 +195,18 @@
                 <version>1.3.0</version>
                 <executions>
                     <execution>
+                        <id>get-0.11-docs</id>
+                        <phase>generate-sources</phase>
+                        <goals>
+                            <goal>wget</goal>
+                        </goals>
+                        <configuration>
+                            <url>https://github.com/apache/iotdb/archive/rel/0.11.zip</url>
+                            <outputDirectory>${project.build.directory}/download</outputDirectory>
+                            <outputFileName>0.11.x.zip</outputFileName>
+                        </configuration>
+                    </execution>
+                    <execution>
                         <id>get-0.10-docs</id>
                         <phase>generate-sources</phase>
                         <goals>
@@ -239,6 +251,32 @@
                 <version>1.2</version>
                 <inherited>false</inherited>
                 <executions>
+                    <execution>
+                        <id>copy-0.11-documentation</id>
+                        <goals>
+                            <goal>copy</goal>
+                        </goals>
+                        <phase>generate-sources</phase>
+                        <configuration>
+                            <fileset>
+                                <directory>${project.build.directory}/download/0.11.x.zip/iotdb-rel-0.11/docs/UserGuide</directory>
+                                <outputDirectory>${project.build.directory}/vue-source/src/UserGuide/V0.11.x</outputDirectory>
+                            </fileset>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>copy-0.11-zh-documentation</id>
+                        <goals>
+                            <goal>copy</goal>
+                        </goals>
+                        <phase>generate-sources</phase>
+                        <configuration>
+                            <fileset>
+                                <directory>${project.build.directory}/download/0.11.x.zip/iotdb-rel-0.11/docs/zh/UserGuide</directory>
+                                <outputDirectory>${project.build.directory}/vue-source/src/zh/UserGuide/V0.11.x</outputDirectory>
+                            </fileset>
+                        </configuration>
+                    </execution>
                     <execution>
                         <id>copy-0.10-documentation</id>
                         <goals>
