--- a/cluster/src/assembly/resources/conf/iotdb-cluster.properties
+++ b/cluster/src/assembly/resources/conf/iotdb-cluster.properties
@@ -149,3 +149,5 @@ enable_use_persist_log_on_disk_to_catch_up=true
 # The number of logs read on the disk at one time, which is mainly used to control the memory usage.
 # This value multiplied by the log size is about the amount of memory used to read logs from the disk at one time.
 max_number_of_logs_per_fetch_on_disk=1000
+
+is_learner=false
